--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 title: Hexo
 subtitle:
 description:
-author: Wei Ran
-language:
+author: 魏燃
+language: zh-Hans
 timezone:
 
 # URL
@@ -72,7 +72,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: yilia
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
