--- a/_config.yml
+++ b/_config.yml
@@ -78,5 +78,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:ngaiwe/ngaiwe.github.io
+  repo: git@github.com:ngaiwe/ngaiwe.github.io.git
   branch: master
